Fixed frontpage being squished. Removed height: 100% from body; changed .bannerBig height to 42vh;

--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 
 .bannerBig{
 	width: 99.8%;
-	height: 45%;
+	height: 42vh;
 }
 
 .bannerSmall{
