--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
 	flex-direction: column;
 	align-items: center;
 	width: 99%;
-	height: 100%;
 	color: var(--text-primary);
 }
 
